--- a/_pgbackup/page_1668098870.html
+++ b/_pgbackup/page_1668098870.html
@@ -2,8 +2,8 @@
 <html
   lang="en"
   wp-template
-  wp-template-export-as="404.php"
-  class="scroll-auto md:scroll-smooth"
+  wp-template-export-as="page.php"
+  wp-template-define-master-page="true"
 >
   <head>
     <meta charset="UTF-8" />
@@ -13,15 +13,11 @@
     <title>Document</title>
   </head>
   <body>
-    <main
-      id="main"
-      class="min-w-full p-4 bg-white dark:bg-gray-800"
-      wp-site-content
-    >
+    <section class="min-w-full p-4 bg-white dark:bg-gray-800" wp-site-content>
       <div
         class="container p-4 mx-auto prose prose-lg bg-white dark:bg-gray-800"
         cms-post-content
       ></div>
-    </main>
+    </section>
   </body>
 </html>
