--- a/index.html
+++ b/index.html
@@ -1,126 +1,70 @@
-<!DOCTYPE html>
-<html
-  lang="en"
-  wp-template
-  wp-template-export-as="index.php"
-  wp-template-define-master-page="true"
->
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="tailwind_theme/tailwind.css" rel="stylesheet" type="text/css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <nav
-        class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 dark:bg-gray-900"
-      >
-        <div
-          class="container flex flex-wrap items-center justify-between mx-auto"
-        >
-          <a href="https://flowbite.com/" class="flex items-center">
-            <img
-              src="https://flowbite.com/docs/images/logo.svg"
-              class="h-6 mr-3 sm:h-9"
-              alt="Flowbite Logo"
-            />
-            <span
-              class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
-              >Flowbite</span
-            >
-          </a>
-          <button
-            data-collapse-toggle="navbar-default"
-            type="button"
-            class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-            aria-controls="navbar-default"
-            aria-expanded="false"
-          >
-            <span class="sr-only">Open main menu</span>
-            <svg
-              class="w-6 h-6"
-              aria-hidden="true"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                clip-rule="evenodd"
-              ></path>
-            </svg>
-          </button>
-          <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-            <ul
-              class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
-              cms-menu="primary"
-            >
-              <li>
-                <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
-                  aria-current="page"
-                  >Home</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                  >About</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                  >Services</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                  >Pricing</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                  >Contact</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <section wp-site-content>
-      <div class="container min-w-full p-4 bg-white dark:bg-gray-800"></div>
-    </section>
-    <footer
-      class="p-4 bg-white shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800"
-    >
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
-        >© 2022
-        <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>.
-        All Rights Reserved.
-      </span>
-      <ul
-        class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0"
-      >
-        <li><a href="#" class="mr-4 hover:underline md:mr-6">About</a></li>
-        <li>
-          <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
-        </li>
-        <li><a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a></li>
-        <li><a href="#" class="hover:underline">Contact</a></li>
-      </ul>
-    </footer>
-    <script src="./node_modules/flowbite/dist/flowbite.js"></script>
-  </body>
+<!DOCTYPE html> 
+<html lang="en" wp-template wp-template-export-as="index.php" wp-template-define-master-page="true" class="scroll-auto md:scroll-smooth"> 
+    <head> 
+        <meta charset="UTF-8"/> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
+        <link href="tailwind_theme/tailwind.css" rel="stylesheet" type="text/css"/> 
+        <title>Document</title>         
+    </head>     
+    <body> 
+        <header> 
+            <!-- <a
+        href="#main"
+        class="absolute bg-white flex flex-col focus:border focus:border-black focus:border-solid focus:leading-6 focus:left-4 
+        focus:min-w-max focus:mx-2 focus:my-4 focus:no-underline focus:p-4 focus:text-base focus:text-black focus:text-center 
+        focus:top-4 focus:z-[999] h-px justify-center left-[-999px] overflow-hidden top-10 w-px z-[-999]"
+        id="main"
+        >Skip to main content</a
+      >-->             
+            <!--   <a
+        class="absolute top-0 px-3 py-4 font-semibold text-white duration-300 ease-in-out -translate-y-16 bg-blue-800 rounded-b-lg dark:bg-gray-900 left-9 focus:translate-y-0"
+        href="#main-content"
+        >Skip To Content</a
+      > -->             <a href="#main" class="dark:bg-gray-50 focus:pt-56 duration-300 ease-in-out -translate-y-16 absolute pt-20 container min-w-full flex flex-col justify-center text-white items-center top-0 left-0 focus: z-[999] focus:translate-y-0">Skip to Content</a> 
+            <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 dark:bg-gray-900" aria-label="main navigation"> 
+                <div class="container flex flex-wrap items-center justify-between mx-auto"> <a href="https://flowbite.com/" class="flex items-center">  <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Flowbite Logo"/>  <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>  </a> 
+                    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false"> <span class="sr-only">Open main menu</span> 
+                        <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"> 
+                            <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>                             
+                        </svg>                         
+                    </button>                     
+                    <div class="hidden w-full md:block md:w-auto" id="navbar-default"> 
+                        <ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700" cms-menu="primary"> 
+                            <li> <a href="#" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">Home</a> 
+                            </li>                             
+                            <li> <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a> 
+                            </li>                             
+                            <li> <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a> 
+                            </li>                             
+                            <li> <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Pricing</a> 
+                            </li>                             
+                            <li> <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a> 
+                            </li>                             
+                        </ul>                         
+                    </div>                     
+                </div>                 
+            </nav>             
+        </header>         
+        <main id="main" wp-site-content> 
+            <div class="container min-w-full p-4 bg-white dark:bg-gray-800"></div>             
+        </main>         
+        <footer class="p-4 bg-white shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800"> <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2022 <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>.
+        All Rights Reserved. </span> 
+            <ul class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0"> 
+                <li>
+                    <a href="#" class="mr-4 hover:underline md:mr-6">About</a>
+                </li>                 
+                <li> <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a> 
+                </li>                 
+                <li>
+                    <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
+                </li>                 
+                <li>
+                    <a href="#" class="hover:underline">Contact</a>
+                </li>                 
+            </ul>             
+        </footer>         
+        <script src="./node_modules/flowbite/dist/flowbite.js"></script>         
+    </body>     
 </html>
