--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       > -->
       <a
         href="#main"
-        class="dark:bg-gray-50 focus:pt-16 duration-300 z-[-1] ease-in-out -translate-y-16 absolute pt-20 container min-w-full flex flex-col justify-center text-gray-800 items-center top-0 left-0 focus:z-[999] focus:translate-y-0"
+        class="dark:bg-gray-50 focus:pt-16 duration-300 z-[-1] ease-in-out -translate-y-16 absolute container min-w-full flex flex-col justify-center text-gray-800 items-center top-0 left-0 focus:z-[999] focus:translate-y-0"
         >Skip to Content</a
       >
       <nav
